Added bots to online lobby, need to implement in main

--- a/app/src/main/res/layout/bot_lobby.xml
+++ b/app/src/main/res/layout/bot_lobby.xml
@@ -35,7 +35,7 @@
             android:text="@string/four"
             android:textColor="@color/whiteButton"
             android:textSize="30sp"
-            app:layout_constraintBottom_toBottomOf="@+id/downArrow"
+            app:layout_constraintBottom_toBottomOf="@+id/minus"
             app:layout_constraintEnd_toStartOf="@+id/plus" />
 
         <ImageButton
@@ -44,19 +44,21 @@
             android:layout_height="40dp"
             android:layout_marginEnd="8dp"
             android:background="@drawable/roundedbutton"
+            android:contentDescription="@string/plus"
             android:onClick="incrementPlayers"
             android:scaleType="fitCenter"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/downArrow"
+            app:layout_constraintEnd_toStartOf="@+id/minus"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.489"
             app:srcCompat="@drawable/plus_symbol" />
 
         <ImageButton
-            android:id="@+id/downArrow"
+            android:id="@+id/minus"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:background="@drawable/roundedbutton"
+            android:contentDescription="@string/minus"
             android:onClick="decrementPlayers"
             android:scaleType="fitCenter"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -69,7 +71,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="4dp"
-            android:text="Max Players:"
+            android:text="@string/max_players"
             android:textColor="@color/whiteButton"
             android:textSize="24sp"
             app:layout_constraintBottom_toBottomOf="@+id/plus"
@@ -82,7 +84,7 @@
         android:id="@+id/playerHubs"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="36dp"
+        app:layout_constraintBottom_toTopOf="@+id/confirmAndClearHubBots"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/userInfo">
@@ -169,8 +171,8 @@
                 android:backgroundTint="@color/purpleButton"
                 android:onClick="generateBot"
                 android:text="@string/bot"
-                android:textSize="12sp"
                 android:textColor="@color/whiteButton"
+                android:textSize="12sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/p1Human"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -259,8 +261,8 @@
                 android:background="@drawable/roundedbutton"
                 android:onClick="generateBot"
                 android:text="@string/bot"
-                android:textSize="12sp"
                 android:textColor="@color/whiteButton"
+                android:textSize="12sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/p2Human"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -349,8 +351,8 @@
                 android:background="@drawable/roundedbutton"
                 android:onClick="generateBot"
                 android:text="@string/bot"
-                android:textSize="12sp"
                 android:textColor="@color/whiteButton"
+                android:textSize="12sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/p3Human"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -439,8 +441,8 @@
                 android:background="@drawable/roundedbutton"
                 android:onClick="generateBot"
                 android:text="@string/bot"
-                android:textSize="12sp"
                 android:textColor="@color/whiteButton"
+                android:textSize="12sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/p4Human"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -464,7 +466,7 @@
             android:layout_marginStart="32dp"
             android:background="@drawable/roundedbutton"
             android:onClick="confirmGameDetails"
-            android:text="Confirm"
+            android:text="@string/confirm"
             android:textColor="@color/whiteButton"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -478,7 +480,7 @@
             android:insetTop="0dp"
             android:insetBottom="0dp"
             android:onClick="clearButton"
-            android:text=" Clear Invites"
+            android:text="@string/clear_invites"
             android:textColor="@color/whiteButton"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/confirmOnline"
@@ -499,10 +501,9 @@
             android:id="@+id/playOnline"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="32dp"
             android:background="@drawable/roundedbutton"
             android:onClick="playBots"
-            android:text="Play"
+            android:text="@string/play"
             android:textColor="@color/whiteButton"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
