Added Bots to online and fixed restart when bots win

--- a/app/src/main/res/layout/bot_lobby.xml
+++ b/app/src/main/res/layout/bot_lobby.xml
@@ -141,7 +141,7 @@
                 android:layout_height="wrap_content"
                 android:ems="10"
                 android:gravity="center"
-                android:hint="Player 1 Username"
+                android:hint="Player 1"
                 android:inputType="textPersonName"
                 android:textColor="@color/whiteButton"
                 android:textColorHint="@color/whiteButton"
@@ -232,7 +232,7 @@
                 android:layout_height="wrap_content"
                 android:ems="10"
                 android:gravity="center"
-                android:hint="Player 2 Username"
+                android:hint="Player 2"
                 android:inputType="textPersonName"
                 android:textColor="@color/whiteButton"
                 android:textColorHint="@color/whiteButton"
@@ -322,7 +322,7 @@
                 android:layout_height="wrap_content"
                 android:ems="10"
                 android:gravity="center"
-                android:hint="Player 3 Username"
+                android:hint="Player 3"
                 android:inputType="textPersonName"
                 android:textColor="@color/whiteButton"
                 android:textColorHint="@color/whiteButton"
@@ -412,7 +412,7 @@
                 android:layout_height="wrap_content"
                 android:ems="10"
                 android:gravity="center"
-                android:hint="Player 4 Username"
+                android:hint="Player 4"
                 android:inputType="textPersonName"
                 android:textColor="@color/whiteButton"
                 android:textColorHint="@color/whiteButton"
