--- a/app/src/main/res/layout/online_lobby.xml
+++ b/app/src/main/res/layout/online_lobby.xml
@@ -156,7 +156,8 @@
                 android:textColor="@color/whiteButton"
                 android:textSize="12sp"
                 app:layout_constraintStart_toEndOf="@+id/player1Username"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                app:backgroundTint="@null"/>
 
             <Button
                 android:id="@+id/p1Accept"
@@ -165,14 +166,14 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginEnd="8dp"
                 android:background="@drawable/roundedbutton"
-                android:backgroundTint="@color/purpleButton"
                 android:onClick="acceptRequest"
                 android:text="@string/accept"
                 android:textColor="@color/whiteButton"
                 android:textSize="12sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/p1Request"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                app:backgroundTint="@null"/>
 
             <Button
                 android:id="@+id/p1BotOnline"
@@ -182,14 +183,14 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
                 android:background="@drawable/roundedbutton"
-                android:backgroundTint="@color/purpleButton"
                 android:onClick="genOnlineBot"
                 android:text="@string/bot"
                 android:textColor="@color/whiteButton"
                 android:textSize="12sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/p1Request"
-                app:layout_constraintTop_toBottomOf="@id/p1Accept" />
+                app:layout_constraintTop_toBottomOf="@id/p1Accept"
+                app:backgroundTint="@null"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -263,7 +264,8 @@
                 android:textColor="@color/whiteButton"
                 android:textSize="12sp"
                 app:layout_constraintStart_toEndOf="@+id/player2Username"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                app:backgroundTint="@null"/>
 
             <Button
                 android:id="@+id/p2Accept"
@@ -278,7 +280,8 @@
                 android:textSize="12sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/p2Request"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                app:backgroundTint="@null"/>
 
             <Button
                 android:id="@+id/p2BotOnline"
@@ -288,14 +291,14 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
                 android:background="@drawable/roundedbutton"
-                android:backgroundTint="@color/purpleButton"
                 android:onClick="genOnlineBot"
                 android:text="@string/bot"
                 android:textColor="@color/whiteButton"
                 android:textSize="12sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/p2Request"
-                app:layout_constraintTop_toBottomOf="@id/p2Accept" />
+                app:layout_constraintTop_toBottomOf="@id/p2Accept"
+                app:backgroundTint="@null"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -369,7 +372,8 @@
                 android:textColor="@color/whiteButton"
                 android:textSize="12sp"
                 app:layout_constraintStart_toEndOf="@+id/player3Username"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                app:backgroundTint="@null"/>
 
             <Button
                 android:id="@+id/p3Accept"
@@ -384,7 +388,8 @@
                 android:textSize="12sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/p3Request"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                app:backgroundTint="@null"/>
 
             <Button
                 android:id="@+id/p3BotOnline"
@@ -394,14 +399,14 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
                 android:background="@drawable/roundedbutton"
-                android:backgroundTint="@color/purpleButton"
                 android:onClick="genOnlineBot"
                 android:text="@string/bot"
                 android:textColor="@color/whiteButton"
                 android:textSize="12sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/p3Request"
-                app:layout_constraintTop_toBottomOf="@id/p3Accept" />
+                app:layout_constraintTop_toBottomOf="@id/p3Accept"
+                app:backgroundTint="@null"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -475,7 +480,8 @@
                 android:textColor="@color/whiteButton"
                 android:textSize="12sp"
                 app:layout_constraintStart_toEndOf="@+id/player4Username"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                app:backgroundTint="@null"/>
 
             <Button
                 android:id="@+id/p4Accept"
@@ -490,7 +496,8 @@
                 android:textSize="12sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/p4Request"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                app:backgroundTint="@null"/>
 
             <Button
                 android:id="@+id/p4BotOnline"
@@ -500,14 +507,14 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
                 android:background="@drawable/roundedbutton"
-                android:backgroundTint="@color/purpleButton"
                 android:onClick="genOnlineBot"
                 android:text="@string/bot"
                 android:textColor="@color/whiteButton"
                 android:textSize="12sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/p4Request"
-                app:layout_constraintTop_toBottomOf="@id/p4Accept" />
+                app:layout_constraintTop_toBottomOf="@id/p4Accept"
+                app:backgroundTint="@null"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
