--- a/app/src/main/res/layout/bot_lobby.xml
+++ b/app/src/main/res/layout/bot_lobby.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/topLevelLocal"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/black"
@@ -158,9 +159,9 @@
                 android:text="@string/human"
                 android:textColor="@color/whiteButton"
                 android:textSize="12sp"
+                app:backgroundTint="@null"
                 app:layout_constraintStart_toEndOf="@+id/player1Username"
-                app:layout_constraintTop_toTopOf="parent"
-                app:backgroundTint="@null"/>
+                app:layout_constraintTop_toTopOf="parent" />
 
             <Button
                 android:id="@+id/p1Bot"
@@ -173,10 +174,10 @@
                 android:text="@string/bot"
                 android:textColor="@color/whiteButton"
                 android:textSize="12sp"
+                app:backgroundTint="@null"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/p1Human"
-                app:layout_constraintTop_toTopOf="parent"
-                app:backgroundTint="@null"/>
+                app:layout_constraintTop_toTopOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -250,9 +251,9 @@
                 android:text="@string/human"
                 android:textColor="@color/whiteButton"
                 android:textSize="12sp"
+                app:backgroundTint="@null"
                 app:layout_constraintStart_toEndOf="@+id/player2Username"
-                app:layout_constraintTop_toTopOf="parent"
-                app:backgroundTint="@null"/>
+                app:layout_constraintTop_toTopOf="parent" />
 
             <Button
                 android:id="@+id/p2Bot"
@@ -265,10 +266,10 @@
                 android:text="@string/bot"
                 android:textColor="@color/whiteButton"
                 android:textSize="12sp"
+                app:backgroundTint="@null"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/p2Human"
-                app:layout_constraintTop_toTopOf="parent"
-                app:backgroundTint="@null"/>
+                app:layout_constraintTop_toTopOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -342,9 +343,9 @@
                 android:text="@string/human"
                 android:textColor="@color/whiteButton"
                 android:textSize="12sp"
+                app:backgroundTint="@null"
                 app:layout_constraintStart_toEndOf="@+id/player3Username"
-                app:layout_constraintTop_toTopOf="parent"
-                app:backgroundTint="@null"/>
+                app:layout_constraintTop_toTopOf="parent" />
 
             <Button
                 android:id="@+id/p3Bot"
@@ -357,10 +358,10 @@
                 android:text="@string/bot"
                 android:textColor="@color/whiteButton"
                 android:textSize="12sp"
+                app:backgroundTint="@null"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/p3Human"
-                app:layout_constraintTop_toTopOf="parent"
-                app:backgroundTint="@null"/>
+                app:layout_constraintTop_toTopOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -434,9 +435,9 @@
                 android:text="@string/human"
                 android:textColor="@color/whiteButton"
                 android:textSize="12sp"
+                app:backgroundTint="@null"
                 app:layout_constraintStart_toEndOf="@+id/player4Username"
-                app:layout_constraintTop_toTopOf="parent"
-                app:backgroundTint="@null"/>
+                app:layout_constraintTop_toTopOf="parent" />
 
             <Button
                 android:id="@+id/p4Bot"
@@ -449,10 +450,10 @@
                 android:text="@string/bot"
                 android:textColor="@color/whiteButton"
                 android:textSize="12sp"
+                app:backgroundTint="@null"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/p4Human"
-                app:layout_constraintTop_toTopOf="parent"
-                app:backgroundTint="@null"/>
+                app:layout_constraintTop_toTopOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
